--- a/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Create.cshtml
@@ -103,7 +103,7 @@
                     <label class="form-check-label">Not in School</label>
                 </div>
             </div>
-            @*<input type="hidden" asp-for="HouseholdMember.Household.HouseholdNo" value="@Model.HouseholdNo" />*@
+            <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
