--- a/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
@@ -13,6 +13,8 @@
         <form asp-action="EditChildrenInfo">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="RequestUrl" value="@Model.RequestUrl" />
+            <input type="hidden" asp-for="HouseholdMember.Id" value="@Model.HouseholdMember.Id" />
+            <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
             <div class="form-group">
                 <label asp-for="HouseholdMember.LastName" class="control-label"></label>
                 <input asp-for="HouseholdMember.LastName" class="form-control" />
@@ -53,15 +55,31 @@
                 <input asp-for="HouseholdMember.NameOfFather" class="form-control" />
                 <span asp-validation-for="HouseholdMember.NameOfFather" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="HouseholdMember.IsNhts" class="control-label"></label>
-                <input asp-for="HouseholdMember.IsNhts" class="form-control" />
-                <span asp-validation-for="HouseholdMember.IsNhts" class="text-danger"></span>
+            <div class="form-group ">
+                <label class="control-label"></label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" asp-for="HouseholdMember.IsNhts" value="true" />
+                    <label class="form-check-label">NHTS</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" asp-for="HouseholdMember.IsNhts" value="false" />
+                    <label class="form-check-label">Non NHTS</label>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="HouseholdMember.IsInSchool" class="control-label"></label>
-                <input asp-for="HouseholdMember.IsInSchool" class="form-control" />
-                <span asp-validation-for="HouseholdMember.IsInSchool" class="text-danger"></span>
+            <div class="form-group ">
+                <div class="control-label">For ages 19 and below</div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" asp-for="HouseholdMember.IsInSchool" value="true" />
+                    <label class="form-check-label">In School</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" asp-for="HouseholdMember.IsInSchool" value="false" />
+                    <label class="form-check-label">Out of School Youth</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" asp-for="HouseholdMember.IsInSchool" value="null" />
+                    <label class="form-check-label">Not in School</label>
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
