--- a/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
@@ -1,4 +1,4 @@
-﻿@model EditChildrenInfoVM
+﻿@model EditHouseholdMemberVM
 
 @{
     ViewData["Title"] = "EditChildrenInfo";
@@ -89,6 +89,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a href="@Model.RequestUrl">Back to List</a>
 </div>
 
