--- a/AUF.EMR.MVC/Views/Masterlist/Adolescent.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Adolescent.cshtml
@@ -81,7 +81,7 @@
                     @Html.DisplayFor(modelItem => item.IsInSchool)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-controller="HouseholdMember" asp-route-id="@item.Id" asp-route-requestUrl="@Model.RequestUrl">Edit</a> |
+                    <a asp-action="EditChildrenInfo" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl">Edit</a> |
                     <a asp-action="Details" asp-controller="HouseholdMember" asp-route-id="@item.Id" asp-route-requestUrl="@Model.RequestUrl">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
