Add pregnancy record and pregnancy appointment models as well as their repo and services and pregnancy record controller and views

--- a/AUF.EMR.MVC/Views/PatientRecord/Details.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using AUF.EMR.MVC.Models.DetailVM;
-@model DetailPatientRecordVM
+﻿@model DetailPatientRecordVM
 
 @{
     ViewData["Title"] = "Details";
