--- a/AUF.EMR.MVC/Views/_ViewImports.cshtml
+++ b/AUF.EMR.MVC/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using AUF.EMR.MVC.Models.CreateVM;
 @using AUF.EMR.MVC.Models.EditVM;
 @using AUF.EMR.MVC.Models.IndexVM;
+@using AUF.EMR.MVC.Models.DetailVM;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
