--- a/AUF.EMR.MVC/Views/Shared/_FormNav.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/_FormNav.cshtml
@@ -25,3 +25,5 @@
 <a asp-action="Index" asp-controller="FamilyPlanning" asp-route-householdNo="@Model">Family Planning Records</a>
 <br />
 <a asp-action="Index" asp-controller="PatientRecord" asp-route-householdNo="@Model">Patient Records</a>
+<br />
+<a asp-action="Index" asp-controller="PregnancyRecord" asp-route-householdNo="@Model">Pregnancy Records</a>
