Add pregnancy appointment create and views

--- a/AUF.EMR.MVC/Views/HouseHoldMember/Details.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Details.cshtml
@@ -117,5 +117,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.HouseholdMember.Id">Edit</a> |
-    <a href="@Model.ReturnUrl">Back to List</a>
+    <a href="@Model.RequestUrl">Back to List</a>
 </div>
