Finalized design for edit employee, reset password, and edit barangay information pages

--- a/AUF.EMR.MVC/Views/User/ResetPassword.cshtml
+++ b/AUF.EMR.MVC/Views/User/ResetPassword.cshtml
@@ -10,20 +10,30 @@
         <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Reset Password for @Model.FullName</h1>
         <hr class="mb-4">
         <form method="post" asp-action="ResetPassword">
-            <div class="form-floating mb-3">
-                <label asp-for="Password" class="block mb-2 text-sm font-medium text-gray-700">Password</label>
-                <input asp-for="Password" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <span asp-validation-for="Password" class="block mb-2 text-sm text-red-700"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <label asp-for="ConfirmPassword" class="block mb-2 text-sm font-medium text-gray-700">Confirm Password</label>
-                <input asp-for="ConfirmPassword" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <span asp-validation-for="ConfirmPassword" class="block mb-2 text-sm text-red-700"></span>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
+                <div>
+                    <div class="form-floating mb-3">
+                        <label asp-for="Password" class="block mb-2 text-sm font-medium text-gray-700">Password</label>
+                        <input asp-for="Password" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" autocomplete="new-password" aria-required="true" placeholder="Password" />
+                        <span asp-validation-for="Password" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <label asp-for="ConfirmPassword" class="block mb-2 text-sm font-medium text-gray-700">Confirm Password</label>
+                        <input asp-for="ConfirmPassword" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" autocomplete="new-password" aria-required="true" placeholder="Confirm Password" />
+                        <span asp-validation-for="ConfirmPassword" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
+                </div>
+                <div>   
+                </div>
             </div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="FullName" />
-            <button type="submit" class="btn btn-primary">Reset Password</button>
-        </form>
+            <div class="flex justify-end">
+                <a asp-action="Edit" class="focus:outline-none text-white bg-red-400 hover:bg-red-500 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back</a>
+                <button type="submit" class="focus:outline-none text-white bg-primary-50 focus:ring-4 focus:ring-green-200 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Reset Password</button>
+            </div>
+            </form>
     </div>
 </div>
 
